Bug 41729 - "In cell" does not correctly handle <td><tr> or <td><td>
Summary: "In cell" does not correctly handle <td><tr> or <td><td>
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Eric Seidel (no email)
URL:
Keywords:
Depends on:
Blocks: 41123
  Show dependency treegraph
 
Reported: 2010-07-06 18:40 PDT by Eric Seidel (no email)
Modified: 2010-07-06 18:49 PDT (History)
1 user (show)

See Also:


Attachments
Patch (19.68 KB, patch)
2010-07-06 18:43 PDT, Eric Seidel (no email)
abarth: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Seidel (no email) 2010-07-06 18:40:02 PDT
"In cell" does not correctly handle <td><tr> or <td><td>
Comment 1 Eric Seidel (no email) 2010-07-06 18:43:08 PDT
Created attachment 60671 [details]
Patch
Comment 2 Adam Barth 2010-07-06 18:46:36 PDT
Comment on attachment 60671 [details]
Patch

ok
Comment 3 Eric Seidel (no email) 2010-07-06 18:49:38 PDT
Committed r62613: <http://trac.webkit.org/changeset/62613>